# Payman

./: .env.example  AI_USAGE.md  API_DOC.md  Cargo.toml  DESIGN.md  Dockerfile  Makefile  README.MD  docker-compose.yml
.sqlx/: query-0858c121651a025d3bd94697e1d657988138e4acb18a06ecbf4099b701b44d96.json  query-08c387074bde0f2b12bf972df30bcd42104cfc148a327b8af116076c48311da1.json  query-14615cabb382702979ab936aae5befeacf4a2e40ee023474fe0b62ae7f9b7f15.json  query-1e39fc99955d776e7c801947e2dae3ce972b237d26f044866607917342bad923.json  query-246ba85d48f1f2b96f754842674a821e2cf542c0716ec71440e2a2ede8cfdc83.json  query-28d53a69360e0fbf9c7a1c0d518fb445cdeaabf8d7981efab0517d9972933095.json  query-2a34fa338c08acfbd18979336cf8881356ef609894039f8c802e0c313d05171e.json  query-2d743db730e780df7a39401f9c3c69279e6e7476c66f23e2120b93544ba6087c.json  query-2e1124898bfee74ef69d6f2fe95840a219e2d113dfaa211d538a588e5ffb85c7.json  query-312dbb8bb9d61b03da3ef2764323bb1f0cae11a72d19795502b89d3aa2f6f150.json  query-31e561093a408d137d88ca5ad8d74e27c8144a2f461d8e25b4a6f6776d8fa65e.json  query-32764e210e0194d1f17307920c40d7bc1425e6e0135ec5f673ce2f72fe769989.json  query-34f416667d81a1cb43b61b916d38772842d2da4758452098ca4c41c2a5f6cba8.json  query-40c8a711ee173aa82c3a2930df516ef03ad8d0c9c2752573a016abd808ad0371.json  query-49f1ff82f4b65103f87188a0f8fd31a23b893398d705c15c8218b56ba3518c50.json  query-5036ee5602cde2793e24a085cbbd687ff3f51c9aa42170ad48a6ba90ff26801e.json  query-560c5457aa39c34b9b6dbea3eac68424b34c985c294ed0c865505c59888bb1cb.json  (+54 more)
migrations/: 20260604185099_create_businesses.sql  (+13 more)
(+44 files in other folders)
