[package]
name = "Payman"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.8.9"
migration = { path= "migration"}
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = "1.0.228"
tokio = { version = "1", features = ["full"] }
uuid = "1.23.2"
