[package]
name = "Payman"
version = "0.1.0"
edition = "2024"
default-run = "Payman"

[dependencies]
axum = "0.8.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate"
] }
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
http = "1.4.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15.7"
thiserror = "2.0.18"
chrono = { version = "0.4.45", features=["serde"] }
anyhow = "1.0.102"
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.10.1"
redis = { version = "1.0.4", features = ["aio","tokio-comp"] }

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"

